<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_search_rules"
            android:icon="@drawable/ic_search"
            android:title="@string/auto_skip_search_rules"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView" />

    <item
            android:id="@+id/menu_update_rules"
            android:title="@string/auto_skip_update_rules"
            app:showAsAction="always" />

    <item
            android:id="@+id/menu_open_accessibility"
            android:title="@string/auto_skip_open_accessibility_settings" />

    <item
            android:id="@+id/menu_app_switches"
            android:title="@string/auto_skip_app_switches" />

    <item
            android:id="@+id/menu_add_subscription"
            android:title="@string/auto_skip_add_subscription" />

    <item
            android:id="@+id/menu_manage_subscriptions"
            android:title="@string/auto_skip_manage_subscriptions" />

    <item
            android:id="@+id/menu_add_local_rule"
            android:title="@string/auto_skip_add_local_rule" />

    <item
            android:id="@+id/menu_import_rules"
            android:title="@string/auto_skip_import_rules" />

    <item
            android:id="@+id/menu_export_rules"
            android:title="@string/auto_skip_export_rules" />

    <item
            android:id="@+id/menu_clear_rule_cache"
            android:title="@string/auto_skip_clear_cache" />

    <item
            android:id="@+id/menu_hit_logs"
            android:title="@string/auto_skip_hit_logs" />
</menu>